package com.jambit.onboarding2020.tbrpg.domain.Item;

import com.jambit.onboarding2020.tbrpg.domain.Player.Player;

public interface Consumable {

    void consume(Player player);

}
