@startuml

title __ITEM's Class Diagram__\n

  namespace com.jambit.onboarding2020.tbrpg {
    namespace domain.Item {
      interface com.jambit.onboarding2020.tbrpg.domain.Item.Consumable {
          {abstract} + consume()
      }
    }
  }
  

  namespace com.jambit.onboarding2020.tbrpg {
    namespace domain.Item {
      class com.jambit.onboarding2020.tbrpg.domain.Item.EscapeRope {
          + EscapeRope()
          + consume()
      }
    }
  }
  

  namespace com.jambit.onboarding2020.tbrpg {
    namespace domain.Item {
      class com.jambit.onboarding2020.tbrpg.domain.Item.HealthPotion {
          + HealthPotion()
          + consume()
      }
    }
  }
  

  namespace com.jambit.onboarding2020.tbrpg {
    namespace domain.Item {
      class com.jambit.onboarding2020.tbrpg.domain.Item.Item {
          - lore : String
          - name : String
          - sellValue : int
          + Item()
          + Item()
          + getLore()
          + getName()
          + getSellValue()
          + setLore()
          + setName()
          + setSellValue()
          + toString()
      }
    }
  }
  

  namespace com.jambit.onboarding2020.tbrpg {
    namespace domain.Item {
      class com.jambit.onboarding2020.tbrpg.domain.Item.Weapon {
          - atkDamage : int
          - critChance : double
          - hitChance : double
          + Weapon()
          + getAtkDamage()
          + getCritChance()
          + getHitChance()
          + setAtkDamage()
          + setCritChance()
          + setHitChance()
          + toString()
      }
    }
  }
  

  com.jambit.onboarding2020.tbrpg.domain.Item.EscapeRope .up.|> com.jambit.onboarding2020.tbrpg.domain.Item.Consumable
  com.jambit.onboarding2020.tbrpg.domain.Item.EscapeRope -up-|> com.jambit.onboarding2020.tbrpg.domain.Item.Item
  com.jambit.onboarding2020.tbrpg.domain.Item.EscapeRope o-- com.jambit.onboarding2020.tbrpg.domain.Player.Player : player
  com.jambit.onboarding2020.tbrpg.domain.Item.HealthPotion .up.|> com.jambit.onboarding2020.tbrpg.domain.Item.Consumable
  com.jambit.onboarding2020.tbrpg.domain.Item.HealthPotion -up-|> com.jambit.onboarding2020.tbrpg.domain.Item.Item
  com.jambit.onboarding2020.tbrpg.domain.Item.HealthPotion o-- com.jambit.onboarding2020.tbrpg.domain.Player.Player : player
  com.jambit.onboarding2020.tbrpg.domain.Item.Weapon -up-|> com.jambit.onboarding2020.tbrpg.domain.Item.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
